--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/scss/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="left_box"></div>
-    <div class="right_box"></div>
-    <script src="/js/main.js"></script>
-  </body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="/scss/style.css" />
+      <title>Document</title>
+   </head>
+   <body>
+      <div class="left_box">
+         <img src="images/Img.png" alt="" />
+         <ul>
+            <li>КБЖУ (на порцию 300 г):</li>
+            <li><span>Белки</span> <span>26,70 г</span></li>
+            <li><span>Жиры</span> <span>17,38 г</span></li>
+            <li><span>Углеводы</span> <span>17,20 г</span></li>
+            <li><span>Калорийность</span> <span>324,08 ккал</span></li>
+         </ul>
+      </div>
+      <div class="right_box"></div>
+      <script src="/js/main.js"></script>
+   </body>
 </html>
